# echo_server

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  deploy.sh  docker-compose.yml  docker-image.sh  prod.yml
dev/: docker-image.sh  version.yml
dev/proj/: Dockerfile
dev/proj/sh/: docker-entrypoint.sh
docker/: refresh.sh
docker/proj/: Dockerfile
docker/proj/sh/: docker-entrypoint.sh
echo/: Cargo.toml
echo/src/: main.rs
prod/: .env  docker-compose.yml  docker-image.sh  nginx.conf  patch_main_nginx_conf.bash  reload_nginx_conf.bash
prod/proj/: .Dockerfile.swn  Dockerfile  before.sh
