[package]
name = "echo"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"

# serde = "1.0.114"
http = "0.2.1"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dependencies]
# # Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# # server and to make HTTP requests.
# hyper = "0.13"
# # To setup some sort of runtime needed by Hyper, we will use the Tokio runtime.
# tokio = { version = "0.2", features = ["full"] }

# (only for testing)
# anyhow = "1.0.31"
# reqwest = { version = "0.10.4", features = ["blocking"] }

# [dependencies]
# rocket = "0.4.5"
